Back-end: continued with Login Controller, created AuthUser class
