# Back-end/Paradigm.Express.WebApi.Bootstrap-main/src/controllers/auth.user.ts
@@ -1,0 +1,5 @@
+
+export class AuthUser {
+    mail: string;
+    password: string;
+}
